// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test.svelte > should render 1`] = `
<body>
  <div>
    
  </div>
</body>
`;

exports[`Test.svelte > should render empty content 1`] = `
<body>
  <div>
    
  </div>
</body>
`;

exports[`Test.svelte > should render object 1`] = `
<body>
  <div>
    <p
      class="w-full flex"
    >
      hello
    </p>
    
    
  </div>
</body>
`;

exports[`Test.svelte > should render using field mapping 1`] = `
<body>
  <div>
    <p
      class="w-full flex"
    >
      hello
    </p>
    
    
  </div>
</body>
`;
